2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* class.lilypond.inc.php:
	Turn on safe mode again, and use convert -density option instead.
	* class.mup.inc.php:
	Fix blacklist tags.
	* class.scorerender.inc.php:
	Simplify convert command line.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* README.txt:
	Minor changes.
	* wp-scorerender.php:
	Impl sys_get_temp_dir() for determining temp folder
	automatically. Don't filter through title, because normally
	title contains only one line, which is not quite enough for
	melodies. Minor changes of text within option page.

2007-03-10  Abel Cheung  <abelcheung@gmail.com>

	* README.txt:
	Update.

2007-03-06  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Also apply filter to title and excerpt.

2007-03-02  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	String and minor layout changes for option page.

2007-03-01  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	Invoke convert once instead of twice.
	* wp-scorerender.php:
	Minor changes of strings in option page.

2007-03-01  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Mark some strings as localizable.

2007-02-25  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Factor out repetitive filter functions into replace_content().

2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add ABC notation support.
	* class.abc.inc.php:
	New file.

2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	More precaution -- also make it fail if command returns
	succeed but didn't render any image.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add back mistakenly deleted plugin info.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* LICENSE: Add info.
	* wp-scorerender.php, class.scorerender.inc.php:
	Trivial change of variable and function names.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php: